--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    >
 
     <ImageView
         android:id="@+id/imageView"
@@ -21,7 +22,7 @@
 
     <ImageView
         android:id="@+id/ivPosterImage"
-        android:layout_width="90dp"
+        android:layout_width="87dp"
         android:layout_height="135dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -29,19 +30,23 @@
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="294dp"
+        android:layout_width="284dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
         android:layout_toEndOf="@+id/ivPosterImage"
         android:text="Movie Title"
-        android:textAppearance="@android:style/TextAppearance.Medium" />
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="#ffffff"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/tvOverview"
-        android:layout_width="293dp"
+        android:layout_width="285dp"
         android:layout_height="108dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tvTitle"
-        android:layout_marginStart="91dp"
-        android:text="Movie Overview and Synopsis" />
+        android:layout_marginStart="99dp"
+        android:text="Movie Overview and Synopsis"
+        android:textColor="#ffffff" />
 </RelativeLayout>
